--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
             Disponible para oportunidades junior
           </div>
           <div>Argentina</div>
-          <div>Email: <a href="mailto:tuemail@correo.com">tuemail@correo.com</a></div>
-          <div>Tel: +54 9 XX XXXX-XXXX</div>
+          <div>Email: <a href="vittorio1508@gmail.com">vittorio1508@gmail.com</a></div>
+          <div>Tel: +54 9 11 6682-3923</div>
           <div>LinkedIn: <a href="https://www.linkedin.com/in/vittorio-forte-logioco-1a2987263/" target="_blank">/vittorio-forte-logioco</a></div>
           <div>GitHub: <a href="https://github.com/VittorioForte" target="_blank">VittorioForte</a></div>
         </div>
